# MXU

./: AGENTS.md  README.md  interface.json  log-overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: cliff.toml
.github/workflows/: build.yml
docs/: add-special-task.md  run-on-start-up.md
src/: App.tsx  index.css  logOverlay.tsx  vite-env.d.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json  log-overlay.json
src-tauri/config/: mxu.json
src-tauri/src/: lib.rs  maa_commands.rs  maa_ffi.rs  main.rs  mxu_actions.rs  screenshot_service.rs  tray.rs  web_server.rs
src-tauri/src/commands/: app_config.rs  console.rs  download.rs  download_core.rs  file_ops.rs  maa_agent.rs  maa_core.rs  mod.rs  state.rs  system.rs  types.rs  update.rs  utils.rs
src-tauri/src/webview2/: detection.rs  dialog.rs  install.rs  mod.rs
src/components/: ActionItem.tsx  AddTaskPanel.tsx  ColorPickerPopover.tsx  ConfirmDialog.tsx  ConnectionPanel.tsx  DashboardView.tsx  DeviceSelector.tsx  FallbackRecoveryModal.tsx  FormControls.tsx  FrameRateSelector.tsx  GlobalUpdateDropOverlay.tsx  HexColorTextInput.tsx  InstallConfirmModal.tsx  LogOverlay.tsx  LogOverlayPopover.tsx  LogsPanel.tsx  OnboardingOverlay.tsx  OptionEditor.tsx  RecentlyClosedPanel.tsx  ResourceSelector.tsx  SchedulePanel.tsx  ScreenshotPanel.tsx  SettingsPage.tsx  TabBar.tsx  TaskItem.tsx  TaskList.tsx  TaskOptionsPanel.tsx  TaskTransferPreview.tsx  TitleBar.tsx  Toolbar.tsx  UpdatePanel.tsx  VCRedistModal.tsx  WelcomeDialog.tsx  listItemShared.tsx
src/hooks/: useIsMobile.ts  useLocalUpdatePackageImport.ts  useTaskRunner.ts
src/i18n/: index.ts
src/services/: appearanceStorage.ts  cacheService.ts  cloudProviders.ts  configService.ts  contentResolver.ts  index.ts  interfaceLoader.ts  logOverlayService.ts  maaService.ts  proxyService.ts  scheduleService.ts  taskMonitor.ts  taskStartService.ts  taskStopService.ts  uiTaskService.ts  updateService.ts  wsService.ts
src/stores/: appStore.ts  helpers.ts  types.ts
src/themes/: index.ts  types.ts
src/types/: config.ts  execTasks.ts  (+4 more)
(+46 files in other folders)
