[package]
name = "mxu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mxu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
log = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
once_cell = "1.19"
regex = "1.10"
base64 = "0.22"
zip = "7.2.0"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures-util = "0.3"
libc = "0.2.180"
semver = "1.0"
os_info = "3"
urlencoding = "2.1"
notify-rust = "4"
shell-words = "1.1.1"

[profile.release]
# 保留调试符号以生成 PDB 文件，便于崩溃分析
debug = true
# 编译单元数量 - 增加到 4 可以减少内存占用（特别是在链接阶段）
# 设置为 1 会最大化优化但增加内存占用，设置为 4 是内存和性能的平衡点
codegen-units = 4
# 使用薄 LTO 而不是完整 LTO，在保持优化效果的同时加快编译速度并减少内存占用
# 如果内存仍然不足，可以注释掉这一行（但会略微降低运行时性能）
lto = "thin"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
] }

